Correct z-index for bg-exit click ability.

--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -86,4 +86,5 @@ table {
   position: absolute;
   top: 0px;
   width: 100%;
+  z-index: 30000;
 }
